fix jdk25 beautiful code and bug